--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "grace-website",
-  "scripts": {
-    "dev": "npx unocss ./**/*.html -o main.css  --minify"
-  },
-  "devDependencies": {
-    "unocss": "^66.1.0-beta.3"
-  }
+    "scripts": {
+        "dev": "npx @tailwindcss/cli -i ./input.css -o ./main.css --watch"
+    },
+    "devDependencies": {
+        "@tailwindcss/cli": "^4.0.9",
+        "daisyui": "^5.0.0",
+        "tailwind": "^4.0.0"
+    }
 }
